<resources>
    <string name="app_name">apkqa001inspecciones</string>

    <!--Encabezado Activity-->
    <string name="title_encabezado">Datos de Inspección</string>
    <string name="label_fecha_inspeccion">Fecha</string>
    <string name="label_region_inspeccion">Region</string>
    <string name="label_tipoInspeccion_inspeccion">Tipo Inspección</string>
    <string name="label_proveedor_inspeccion">Proveedor</string>
    <string name="label_pedido_inspeccion">Pedido</string>
    <string name="btn_comenzar_insp">Comenzar Inspección</string>

    <string name="title_listado">Datos de Pedido</string>
    <string name="proveedor_placeholder">76422 MUEBLES PARA EL HOGAR VICTORIA</string>
    <string name="btn_finalizar_insp">Finalizar Inspección</string>


    <string name="title_advertencia">Advertencia</string>
    <string name="error_obtener_listado_pedido">Error en consultar servicio. \nHubo un error, por favor intente de nuevo</string>

    <string name="producto_placeholder">6536673 - Lavadora Mabe Dos Tinas LMDX3123PBAB0 13 kg Blanca</string>
    <string name="title_producto">Datos de Producto</string>
    <string name="recibir">Cantidad Recibir</string>
    <string name="muestra">Cantidad Muestra</string>
    <string name="pregunta_manual">¿Cumple con los criterios establecidos en el manual?*</string>
    <string name="si">SI</string>
    <string name="no">NO</string>
    <string name="na">No cuenta con manual de empaque</string>
    <string name="pregunta_hallazgos">¿Se encontraron hallazgos en empaque de este producto?*</string>
    <string name="btn_Continuar">Continuar</string>


    <string name="inspeccion_loads_name_app">Inspección Calidad</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="image_saved">Imagen guardada en la galeria</string>

</resources>