<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".encabezadoInspeccion.EncabezadoActivity">


    <RelativeLayout
        android:id="@+id/titulo_encabezado"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        tools:ignore="MissingConstraints">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="22dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="top"
                android:lineSpacingExtra="5sp"
                android:paddingTop="5sp"
                android:text="@string/title_encabezado"
                android:textAppearance="@style/title"
                android:translationY="-2.35sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_encabezado"
                android:visibility="invisible"/>
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/dts1_encabezado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toBottomOf="@id/titulo_encabezado">

        <RelativeLayout
            android:id="@+id/encabezado1_contenedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/lin_bg"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/labelfecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_fecha_inspeccion"
                    android:textAppearance="@style/LabelDeshabilitado"
                    android:lineSpacingExtra="5sp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:translationY="-2.46sp"
                    android:gravity="top"
                    android:layout_marginTop="20dp"/>

                <com.coppel.framework.ui.view.edittexts.TextInputEditText
                    android:id="@+id/fecha_encabezado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"/>

                <TextView
                    android:id="@+id/labelregion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_region_inspeccion"
                    android:textAppearance="@style/LabelDeshabilitado"
                    android:lineSpacingExtra="5sp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:translationY="-2.46sp"
                    android:gravity="top"
                    android:layout_marginTop="10dp"
                    />

                <com.coppel.framework.ui.view.edittexts.TextInputEditText
                    android:id="@+id/region_encabezado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"/>

                <TextView
                    android:id="@+id/labeltipoinspeccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_tipoInspeccion_inspeccion"
                    android:textAppearance="@style/LabelDeshabilitado"
                    android:lineSpacingExtra="5sp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:translationY="-2.46sp"
                    android:gravity="top"
                    android:layout_marginTop="10dp"
                    />

                <com.coppel.framework.ui.view.edittexts.TextInputEditText
                    android:id="@+id/tipo_inspeccion_encabezado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginBottom="20dp"/>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/dts2_encabezado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toBottomOf="@id/dts1_encabezado">

        <RelativeLayout
            android:id="@+id/encabezado2_contenedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/lin_bg"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/labelproveedorinspeccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_proveedor_inspeccion"
                    android:textAppearance="@style/LabelDefault"
                    android:lineSpacingExtra="5sp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:translationY="-2.46sp"
                    android:gravity="top"
                    android:layout_marginTop="10dp"
                    />

                <com.coppel.framework.ui.view.edittexts.TextInputEditText
                    android:id="@+id/proveedor_encabezado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"/>

                <TextView
                    android:id="@+id/labelpedidoinspeccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_pedido_inspeccion"
                    android:textAppearance="@style/LabelDefault"
                    android:lineSpacingExtra="5sp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:translationY="-2.46sp"
                    android:gravity="top"
                    android:layout_marginTop="10dp"
                    />

                <com.coppel.framework.ui.view.edittexts.TextInputEditText
                    android:id="@+id/pedido_encabezado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginBottom="20dp"/>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>


        <Button
            android:id="@+id/btn_comenzar"
            style="@style/ActiveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="20dp"
            android:text="@string/btn_comenzar_insp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dts2_encabezado"
            app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>