<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".inspeccionProducto.InspeccionProductoActivity">

    <RelativeLayout
        android:id="@+id/producto_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/listado_encabezado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="22dp"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/title_producto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helveticaneue"
                android:gravity="top"
                android:lineSpacingExtra="5sp"
                android:paddingTop="5sp"
                android:text="@string/title_producto"
                android:textAppearance="@style/title"
                android:translationY="-2.35sp" />

            <TextView
                android:id="@+id/tv_nombre_producto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helveticaneue"
                android:gravity="top"
                android:hint="@string/producto_placeholder"
                android:lineSpacingExtra="5sp"
                android:paddingTop="5sp"
                android:textAppearance="@style/header_proveedor"
                android:textColorHint="#78909C"
                android:translationY="-2.35sp" />

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingHorizontal="5dp"
        android:paddingTop="10dp"

        app:layout_constraintTop_toBottomOf="@+id/producto_header"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:id="@+id/label_muestra"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="5dp"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/lbl_recibir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/helveticaneue"
                android:gravity="top"
                android:lineSpacingExtra="5sp"
                android:text="@string/recibir"
                android:textAppearance="@style/mini_title"
                android:translationY="-2.3sp" />

            <com.coppel.framework.ui.view.edittexts.TextInputEditText
                android:id="@+id/piezas_recibir"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="top"
                android:layout_marginHorizontal="10dp"
                android:inputType="number">

            </com.coppel.framework.ui.view.edittexts.TextInputEditText>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/contenido_muestra"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="5dp"
            app:layout_constraintTop_toBottomOf="@+id/label_muestra"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/lbl_muestra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/helveticaneue"
                android:gravity="top"
                android:lineSpacingExtra="5sp"
                android:text="@string/muestra"
                android:textAppearance="@style/mini_title"
                android:translationY="-2.3sp" />

            <com.coppel.framework.ui.view.edittexts.TextInputEditText
                android:id="@+id/piezas_muestra"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="top"
                android:layout_marginHorizontal="10dp"
                android:inputType="number"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>