<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".listadoPedido.ListadoPedidoActivity">

    <RelativeLayout
        android:id="@+id/pedido_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/listado_encabezado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="22dp"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_listado"
                android:textAppearance="@style/title"
                android:fontFamily="@font/helveticaneue"
                android:paddingTop="5sp"
                android:lineSpacingExtra="5sp"
                android:translationY="-2.35sp"
                android:gravity="top"
                />

            <TextView
                android:id="@+id/title_proveedor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helveticaneue"
                android:gravity="top"
                android:hint="@string/proveedor_placeholder"
                android:lineSpacingExtra="5sp"
                android:paddingTop="5sp"
                android:textAppearance="@style/title"
                android:textColorHint="#78909C"
                android:translationY="-2.35sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView"
                    android:gravity="top"
                    android:visibility="invisible"/>

                <TextView
                    android:id="@+id/text_pedido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:lineSpacingExtra="5sp"
                    android:translationY="-2.3sp"
                    android:gravity="top"
                    android:layout_marginEnd="10dp"
                    android:text="Pedido: "/>
                <TextView
                    android:id="@+id/num_pedido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:lineSpacingExtra="5sp"
                    android:translationY="-2.3sp"
                    android:gravity="top"
                    android:layout_marginEnd="10dp"
                    android:textAppearance="@style/mini_title"
                    android:fontFamily="@font/helveticaneue"
                    android:text="654321"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/pedido_body"
        android:layout_width="match_parent"
        android:layout_height="460dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/pedido_header"
        app:layout_constraintBottom_toTopOf="@id/btn_finalizar">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/nav_host_fragment"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:defaultNavHost="true"
            app:navGraph="@navigation/nav_graph" />

        <View
            android:id="@+id/block"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/md_light_background"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </RelativeLayout>

    <Button
        android:id="@+id/btn_finalizar"
        style="@style/ActiveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:text="@string/btn_finalizar_insp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pedido_body"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>