<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/foto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".evidenciaFotoEmpaque.EvidenciaFotoEmpaqueActivity">

    <RelativeLayout
        android:id="@+id/manual_evidencia_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/man_evidencia_encabezado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="22dp"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/man_evidencia_title_producto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helveticaneue"
                android:gravity="top"
                android:lineSpacingExtra="5sp"
                android:paddingTop="5sp"
                android:text="@string/title_producto"
                android:textAppearance="@style/title"
                android:translationY="-2.35sp" />

            <TextView
                android:id="@+id/tv_nom_prod_manual_evidencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helveticaneue"
                android:gravity="top"
                android:hint="@string/producto_placeholder"
                android:lineSpacingExtra="5sp"
                android:paddingTop="5sp"
                android:textAppearance="@style/header_proveedor"
                android:textColorHint="#78909C"
                android:translationY="-2.35sp" />

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/contenedor_foto_manual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/manual_evidencia_header"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/tomar_foto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="22dp"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/lbl_tomar_foto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helveticaneue"
                android:gravity="top"
                android:lineSpacingExtra="5sp"
                android:paddingTop="5sp"
                android:text="@string/title_producto"
                android:textAppearance="@style/title"
                android:translationY="-2.35sp" />

            <ImageView
                android:id="@+id/iv_tomar_foto"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorGrisDisabled"
                app:srcCompat="@drawable/camera" />


        </LinearLayout>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/listados_fotos"
        android:layout_width="392dp"
        android:layout_height="183dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/contenedor_foto_manual"
        tools:ignore="MissingConstraints">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/nav_host_fragment_fotos"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:defaultNavHost="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/block_fotos_manual"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/md_light_background"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progress_fotos_manual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_foto"
        android:layout_width="101dp"
        android:layout_height="142dp"
        android:background="@color/colorGrisDisabled"
        app:layout_constraintBottom_toTopOf="@+id/btn_continuar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listados_fotos"
        app:layout_constraintVertical_bias="0.612"
        app:srcCompat="@drawable/camera"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_continuar2"
        style="@style/ActiveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:text="@string/btn_Continuar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listados_fotos"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>